# ComfyUI-mobilesam

./: README.md  __init__.py  models.json  pyproject.toml  requirements.txt
modules/: detector.py  model.py  predictor.py
workflows/: workflow-point-box.json
